Fix the hero section image and worked on the testimonial new feedback on mobile screen

--- a/public/customCSS/foremoststyles_jo.css
+++ b/public/customCSS/foremoststyles_jo.css
@@ -111,6 +111,9 @@
     .e-aboutus-home{
         padding: 1rem;
     }
+    .text-black-paragraph{
+        text-align: left;
+    }
 }
 
 /* Ipad screen */
@@ -282,7 +285,7 @@ ll
     }
 
     .image-min-height-mobile {
-        height: 14em;
+        /* height: 14em; */
     }
 }
 
